# poc-spark-connect

./: .env.model  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/sample/: 6960.xml  6968.xml  6972.xml  7014.xml  7032.xml  7068.xml  7078.xml  7096.xml  7099.xml  7212.xml  7244.xml  7254.xml  7264.xml  7568.xml  7585.xml  7589.xml  7596.xml  7609.xml
docs/: README.en.md
spark/: Dockerfile  entrypoint.sh  pyspark.sh  requirements.txt
src/: minio_test.py  pyproject.toml  read_sample.py  s3_sample.py  settings.py
src/fiis/: read_sample.py
